--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,15 @@
     <title><%= title %></title>
 </head>
 <body>
-    <h1>Rendered from ejs views</h1>
+    <h1>Contact List</h1>
+    <ul>
+        <% for(let i of contact_list){ %>
+            <li>
+                <p><%= i.name %></p>
+                <p><%= i.phone %></p>
+            </li>
+
+        <% } %>
+    </ul>
 </body>
 </html>
