Making Contact Form and Route

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,5 +17,16 @@
 
         <% } %>
     </ul>
+
+    <div>
+        <form action="/create-contact" method="post">
+            <input type="text" name="name" placeholder="Enter Name">
+            <input type="number" name="phone" placeholder="Enter Phone Number">
+            <button type="submit">Add Contact</button>
+        </form>
+    </div>
+
+
+
 </body>
 </html>
