Deleting a contact from db

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
                         <p id="phone"><%= i.phone %></p>
                     </div>
                     <div class="delete-button">
-                        <a href="/delete-contact/?phone=<%= i.phone %>">
+                        <a href="/delete-contact/?id=<%= i._id %>">
                             <i class="fa-solid fa-dumpster"></i>
                         </a>
                     </div>
